--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                      <div class="info-grid">
                         <p>Status:</p><p><span id="statusDisplay">Initializing...</span></p>
                         <p>Episode:</p><p><span id="episodeDisplay">0</span>/<span id="totalEpisodesDisplay">10000</span></p>
-                        <p>Destinations Left:</p><p><span id="destLeftDisplay">N/A</span></p>
+                        <p>Deliveries Left:</p><p><span id="destLeftDisplay">N/A</span></p>
                         <p>Epsilon:</p><p><span id="epsilonDisplay">1.0000</span></p>
                         <p>Episode Cost:</p><p><span id="rewardDisplay">0</span></p> <!-- Label changed -->
                         <p>Avg Cost (Last 100):</p><p><span id="avgRewardDisplay">N/A</span></p> <!-- Label changed -->
