--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                         <input type="range" id="learningRate" min="0.05" max="1.0" value="0.1" step="0.01">
                         <span id="learningRateValue">0.10</span>
                     </div>
+                    <!-- ... (Keep other algorithm sliders: Discount, Epsilon Start/Decay/Min) ... -->
                      <div class="control-group range-group">
                         <label for="discountFactor" title="Gamma (γ)">Discount:</label>
                         <input type="range" id="discountFactor" min="0.7" max="1.0" value="0.90" step="0.01">
@@ -124,7 +125,6 @@
                         <div class="control-group toggle-group">
                             <input type="checkbox" id="showFinalRoute" checked><label for="showFinalRoute">Best Found Route</label>
                         </div>
-                        <!-- Removed 3D effect toggle for simplicity -->
                      </div>
                  </div>
                   <div class="sidebar-section">
