--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Delivery Route Optimization (Q-Learning)</title>
+    <title>Delivery Route Optimization (Q-Learning)</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,14 +13,14 @@
 <body>
     <div class="app-container">
         <header class="app-header">
-            <h1>Interactive Delivery Route Optimization</h1>
-            <p>Using Q-Learning to find the shortest delivery route</p>
+            <h1>Delivery Route Optimization using Q-Learning</h1>
+            <p>Finding the shortest route to visit all locations and return</p>
         </header>
 
         <div class="main-content">
             <aside class="sidebar left-sidebar">
                 <div class="sidebar-section">
-                    <h2>Map Configuration</h2>
+                    <h2>Map & Locations</h2>
                     <div class="control-group">
                         <label for="gridSize">Map Size (Grid):</label>
                         <select id="gridSize">
@@ -31,80 +31,78 @@
                         </select>
                     </div>
                      <div class="control-group">
-                        <label for="numDeliveriesDisplay" id="numDeliveriesLabel">Number of Deliveries (Max 7):</label>
-                        <!-- Display only, value set by placement or generate -->
-                        <input type="text" id="numDeliveriesDisplay" value="5" readonly class="readonly-input">
-                        <small>Place manually below or Generate New.</small>
+                        <label for="numDeliveries">Number of Deliveries:</label>
+                        <select id="numDeliveries">
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5" selected>5</option>
+                            <option value="6">6 (Slower)</option>
+                             <option value="7">7 (Very Slow)</option>
+                        </select>
+                         <small>(More locations significantly increase training time)</small>
                     </div>
-                     <div class="control-group edit-mode-group">
-                        <label>Placement Mode (Click on Map):</label>
-                        <div class="radio-group">
-                            <input type="radio" id="editModeNone" name="editMode" value="none" checked><label for="editModeNone" title="Disable map clicking">Off</label>
-                            <input type="radio" id="editModeDepot" name="editMode" value="depot"><label for="editModeDepot" title="Click to set Depot (D)">Depot</label>
-                            <input type="radio" id="editModeDelivery" name="editMode" value="delivery"><label for="editModeDelivery" title="Click to add/move Delivery points (1, 2, 3...)">Delivery</label>
-                        </div>
-                     </div>
-                     <button id="generateMapBtn" class="btn btn-secondary full-width">Generate New Random Map</button>
-                     <button id="clearDeliveriesBtn" class="btn btn-outline full-width">Clear Placed Deliveries</button>
+                    <!-- Obstacle slider removed for simplicity in this version -->
+                    <button id="resetEnvBtn" class="btn btn-secondary full-width">Generate New Map & Locations</button>
+                     <!-- Grid Editing removed for simplicity in this version -->
                 </div>
 
                  <div class="sidebar-section">
-                    <h2>Learning Parameters</h2>
+                    <h2>Algorithm Parameters</h2>
                      <div class="control-group range-group">
                         <label for="learningRate" title="Alpha (α)">Learn Rate:</label>
                         <input type="range" id="learningRate" min="0.05" max="1.0" value="0.1" step="0.01">
                         <span id="learningRateValue">0.10</span>
                     </div>
-                    <!-- ... (Keep other algorithm sliders: Discount, Epsilon Start/Decay/Min) ... -->
                      <div class="control-group range-group">
                         <label for="discountFactor" title="Gamma (γ)">Discount:</label>
-                        <input type="range" id="discountFactor" min="0.7" max="1.0" value="0.90" step="0.01">
+                        <input type="range" id="discountFactor" min="0.7" max="1.0" value="0.90" step="0.01"> <!-- Slightly lower discount might be better for route cost -->
                         <span id="discountFactorValue">0.90</span>
                     </div>
                     <div class="control-group range-group">
                         <label for="epsilonStart" title="Epsilon Start (ε)">Exploration Start:</label>
-                        <input type="range" id="epsilonStart" min="0.5" max="1.0" value="1.0" step="0.05">
+                        <input type="range" id="epsilonStart" min="0.5" max="1.0" value="1.0" step="0.05"> <!-- Start high -->
                         <span id="epsilonStartValue">1.00</span>
                     </div>
                      <div class="control-group range-group">
                         <label for="epsilonDecay" title="Epsilon Decay Rate">Exploration Decay:</label>
-                        <input type="range" id="epsilonDecay" min="0.995" max="0.9999" value="0.9995" step="0.0001">
+                        <input type="range" id="epsilonDecay" min="0.995" max="0.9999" value="0.9995" step="0.0001"> <!-- Slower decay needed for larger state space -->
                         <span id="epsilonDecayValue">0.9995</span>
                     </div>
                      <div class="control-group range-group">
                         <label for="epsilonMin" title="Epsilon Minimum">Exploration Min:</label>
-                        <input type="range" id="epsilonMin" min="0.01" max="0.2" value="0.05" step="0.01">
+                        <input type="range" id="epsilonMin" min="0.01" max="0.2" value="0.05" step="0.01"> <!-- Slightly higher min explore -->
                         <span id="epsilonMinValue">0.05</span>
                     </div>
                      <div class="control-group">
                          <label for="maxEpisodes" title="Max training episodes">Max Episodes:</label>
-                         <input type="number" id="maxEpisodes" value="10000" min="1000" step="1000">
+                         <input type="number" id="maxEpisodes" value="10000" min="1000" step="1000"> <!-- More episodes needed -->
                      </div>
-                     <button id="resetQTableBtn" class="btn btn-warning full-width">Reset Learning Progress</button>
+                     <button id="resetQTableBtn" class="btn btn-warning full-width">Reset Learning</button>
                  </div>
                  <div class="sidebar-section">
                      <h2>Persistence</h2>
-                     <button id="saveQTableBtn" class="btn btn-outline full-width">Save State</button>
-                     <button id="loadQTableBtn" class="btn btn-outline full-width">Load State</button>
+                     <button id="saveQTableBtn" class="btn btn-outline full-width">Save Learned Route</button>
+                     <button id="loadQTableBtn" class="btn btn-outline full-width">Load Learned Route</button>
                  </div>
             </aside>
 
             <main class="main-panel">
                 <div class="canvas-container">
                     <canvas id="gridCanvas" width="500" height="500"></canvas>
-                     <!-- Cell Info Box Removed -->
+                     <!-- Cell Info Box Removed - Less relevant here -->
                 </div>
                 <div class="main-controls">
                     <div class="control-group range-group">
                          <label for="speed">Animation Speed:</label>
-                         <input type="range" id="speed" min="0" max="1000" value="800" step="10">
+                         <input type="range" id="speed" min="0" max="1000" value="800" step="10"> <!-- Default to Fast -->
                          <span id="speedValue">Very Fast</span>
                     </div>
                     <div class="control-group main-buttons">
                         <button id="startTrainingBtn" class="btn btn-primary btn-icon" title="Start/Resume Training">▶<span> Train</span></button>
                         <button id="pauseTrainingBtn" class="btn btn-warning btn-icon" disabled title="Pause Training">❚❚<span> Pause</span></button>
                         <button id="stopTrainingBtn" class="btn btn-danger btn-icon" disabled title="Stop Simulation">■<span> Stop</span></button>
-                        <button id="showRouteBtn" class="btn btn-success btn-icon" title="Calculate and Show Best Route Found">★<span> Show Route</span></button>
+                        <!-- Step button removed - less useful for high-level actions -->
+                        <button id="runGreedyBtn" class="btn btn-success btn-icon" title="Show Optimal Route Found">★<span> Show Route</span></button>
                     </div>
                 </div>
                  <div class="chart-container">
@@ -116,14 +114,15 @@
                  <div class="sidebar-section">
                     <h2>Visualization</h2>
                     <div class="viz-toggles">
+                        <!-- Removed Q-Arrows, Policy Arrows, Heatmap - Less intuitive here -->
                         <div class="control-group toggle-group">
-                            <input type="checkbox" id="showCurrentPath" checked><label for="showCurrentPath">Live Route Attempt</label>
+                            <input type="checkbox" id="showCurrentPath" checked><label for="showCurrentPath">Show Current Route Attempt (Training)</label>
                         </div>
                         <div class="control-group toggle-group">
-                            <input type="checkbox" id="showTruck" checked><label for="showTruck">Truck Position</label>
+                            <input type="checkbox" id="showTruck" checked><label for="showTruck">Show Truck</label>
                         </div>
                         <div class="control-group toggle-group">
-                            <input type="checkbox" id="showFinalRoute" checked><label for="showFinalRoute">Best Found Route</label>
+                            <input type="checkbox" id="showFinalRoute" checked><label for="showFinalRoute">Show Final Optimal Route</label>
                         </div>
                      </div>
                  </div>
@@ -134,10 +133,10 @@
                         <p>Episode:</p><p><span id="episodeDisplay">0</span>/<span id="totalEpisodesDisplay">10000</span></p>
                         <p>Deliveries Left:</p><p><span id="destLeftDisplay">N/A</span></p>
                         <p>Epsilon:</p><p><span id="epsilonDisplay">1.0000</span></p>
-                        <p>Episode Cost:</p><p><span id="rewardDisplay">0</span></p>
-                        <p>Avg Cost:</p><p><span id="avgRewardDisplay">N/A</span></p>
-                         <p>Best Cost:</p><p><span id="bestRouteCostDisplay">N/A</span></p>
-                         <p>States Learned:</p><p><span id="qTableSizeDisplay">0</span></p>
+                        <p>Episode Cost:</p><p><span id="rewardDisplay">0</span></p> <!-- Label changed -->
+                        <p>Avg Cost (Last 100):</p><p><span id="avgRewardDisplay">N/A</span></p> <!-- Label changed -->
+                         <p>Best Route Cost:</p><p><span id="bestRouteCostDisplay">N/A</span></p> <!-- New Metric -->
+                         <p>Q-Table Size:</p><p><span id="qTableSizeDisplay">0</span> states</p>
                      </div>
                 </div>
             </aside>
