--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p>
                 Words feel inadequate right now, but I need you to know how deeply I regret
                 <!-- **** IMPORTANT: Replace this with SPECIFICALLY what you are sorry for **** -->
-                [Describe what you did wrong and the situation clearly and honestly. Avoid excuses.].
+                for my words in the morning.
                 <!-- **** END OF IMPORTANT SECTION **** -->
                 There's no excuse for my actions/words, and I understand that I've hurt you. Seeing you upset because of me is the worst feeling in the world.
             </p>
@@ -34,7 +34,7 @@
             <p>
                 I've been thinking a lot about what happened, and I realize
                 <!-- **** IMPORTANT: Explain WHY you think she's hurt. Show empathy. **** -->
-                [Explain the impact of your actions from HER perspective. Show you've thought about her feelings. E.g., "...how my words must have made you feel disregarded/unimportant/etc."]
+                I shouln't start the day like that.
                 <!-- **** END OF IMPORTANT SECTION **** -->
                 Your feelings are valid, and I hate that I'm the reason for your pain.
             </p>
@@ -45,7 +45,7 @@
             <p>
                 This is entirely on me. I take full responsibility for
                 <!-- **** IMPORTANT: Reiterate taking responsibility clearly **** -->
-                [Briefly restate the core issue you caused, e.g., "...my carelessness," "...my harsh words," "...not listening properly."].
+                today's bad behavior.
                 <!-- **** END OF IMPORTANT SECTION **** -->
                 I wish I could turn back time and handle things differently, but since I can't, I want to focus on making things right, starting now.
             </p>
@@ -56,7 +56,7 @@
             <p>
                 Please don't let this overshadow everything we are. Remember
                 <!-- **** IMPORTANT: Add a positive shared memory or inside joke **** -->
-                [Mention a specific happy memory, inside joke, or something you cherish about her/your relationship. E.g., "...that time we [did something fun]?" or "...how much I love your [specific quality]?"]?
+                we play call of duty and you get the powerful robot?
                 <!-- **** END OF IMPORTANT SECTION **** -->
                 Those moments, and you, mean the world to me. My life is infinitely better with you in it, Surovi. You bring so much [mention specific positive things: joy, laughter, perspective, etc.] to my life.
             </p>
@@ -69,7 +69,7 @@
             <p>
                 I am committed to learning from this and being a better partner. I promise to
                 <!-- **** IMPORTANT: State specific, actionable changes you will make **** -->
-                [Be specific about how you will change your behavior. E.g., "...listen more attentively," "...think before I speak," "...be more considerate of your feelings," "...communicate more openly."].
+                be more considerate of your feelings.
                 <!-- **** END OF IMPORTANT SECTION **** -->
                 I value you and our relationship too much to let my mistakes define us. I want to earn back your trust.
             </p>
@@ -83,7 +83,7 @@
             <p>With all my love and deepest apologies,</p>
             <p class="signature">
                 <!-- **** IMPORTANT: Put your name here **** -->
-                [Your Name]
+                Sincerely- Salauddin Majumder
             </p>
         </section>
 
