--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <!-- **** IMPORTANT: Add a positive shared memory or inside joke **** -->
                 we play call of duty and you get the powerful robot?
                 <!-- **** END OF IMPORTANT SECTION **** -->
-                Those moments, and you, mean the world to me. My life is infinitely better with you in it, Surovi. You bring so much [mention specific positive things: joy, laughter, perspective, etc.] to my life.
+                Those moments, and you, mean the world to me. My life is infinitely better with you in it, Surovi. You bring so much joy, laughter to my life.
             </p>
             <!-- Optional: Add an image -->
             <!-- <img src="path/to/a/nice/photo_of_you_two.jpg" alt="A cherished moment" class="memory-image fade-in"> -->
